--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "devDependencies": {
     "co": "^3.0.6",
     "duo": "^0.2.8",
-    "mocha": "*",
+    "mocha": "*"
   },
   "main": "index"
 }
