--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   },
   "dependencies": {
     "debug": "^1.0.2",
-    "sane": "^0.5.2"
+    "sane": "~0.5.4"
   },
   "devDependencies": {
     "co-mocha": "0.0.4",
     "duo": "^0.7.0",
     "mkdirp": "^0.5.0",
     "mocha": "*",
-    "touch": "0.0.3"
+    "touch": "0.0.3",
+    "gnode": "0.0.8"
   },
   "main": "index"
 }
